[package]
name = "bgm_property_yaml"
version = "1.2.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
smash-bgm-property = { path = "../smash-bgm-property", features = ["serde"] }
serde_yaml = { version = "0.9" }
