[package]
name = "smash-bgm-property"
version = "1.2.0"
authors = ["jam1garner <8260240+jam1garner@users.noreply.github.com>"]
edition = "2021"
description = "Reading and writing bgm_property.bin files"
documentation = "https://docs.rs/smash-bgm-property"
repository = "https://github.com/jam1garner/smash-bgm-property"
license = "MIT"

[dependencies]
binrw = "0.11"
hash40 = "1.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
